--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="home_left_img">
-							<img src="img/banner/man.png" alt="">
+							<img src="img/banner/man.jpg" alt="">
 						</div>
 					</div>
 					<div class="col-lg-6">
