--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 								</ul>
 							</li>
-							
+
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -77,8 +77,7 @@
 						<div class="banner_content">
 							<h5>This is me</h5>
 							<h2>Yuchao Wang</h2>
-							<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference
-								to the ghost showing Scrooge some different futures)</p>
+							<p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
 							<a class="banner_btn" href="#">Discover Now</a>
 						</div>
 					</div>
@@ -95,7 +94,14 @@
 				<div class="col-lg-6">
 					<div class="welcome_text">
 						<h4>About Myself</h4>
-						<p>nappropriate behavior is often laughed.</p>
+						<p style="color:blueviolet;font-size:120%;">Hey, I am a Masters of CS student at Northwestern University. I have done my undergraduate in
+							Computer Engineering from University of Pittsburgh. I am currently looking for exciting SDE
+							summer intern roles
+							2020.</p>
+						<p style="color:blueviolet;font-size:120%;">I am very self-motived and strongly aspire to learn new technologies. I really like to spend
+							time building web and
+							mobile app, because I like to solve problems and conquer challenges in front of me. </p>
+						<p style="color:blueviolet;font-size:120%;">If you are interested in my profile, feel free to email me. </p>
 					</div>
 				</div>
 				<div class="col-lg-6">
