take off the link

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/ansys.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Software Test Engineer</h4>
-							</a>
+							<!-- </a> -->
 							<p>Co-Op</p>
 						</div>
 					</div>
@@ -246,9 +246,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/tutor.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Tutor</h4>
-							</a>
+							<!-- </a> -->
 							<p>Part-Time</p>
 						</div>
 					</div>
@@ -257,9 +257,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/mobile-app.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Android Mobile App</h4>
-							</a>
+							<!-- </a> -->
 							<p>Personal Project</p>
 						</div>
 					</div>
@@ -268,9 +268,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/web-app.png" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Web Application</h4>
-							</a>
+							<!-- </a> -->
 							<p>Client Project</p>
 						</div>
 					</div>
@@ -279,9 +279,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/machine-learning.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Machine Learning</h4>
-							</a>
+							<!-- </a> -->
 							<p>Client Project</p>
 						</div>
 					</div>
@@ -290,9 +290,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/robotics.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Self-Charging Robot</h4>
-							</a>
+							<!-- </a> -->
 							<p>Senior Design Project</p>
 						</div>
 					</div>
@@ -301,9 +301,9 @@
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/vehicle.jpg" alt="">
 						<div class="projects_text">
-							<a href="portfolio-details.html">
+							<!-- <a href="portfolio-details.html"> -->
 								<h4>Vehicle Robot</h4>
-							</a>
+							<!-- </a> -->
 							<p>Embedded System Design Project</p>
 						</div>
 					</div>
