--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
-							<!-- <li class="nav-item"><a class="nav-link" href="services.html">Services</a> -->
-							<li class="nav-item submenu dropdown">
+							<li class="nav-item"><a class="nav-link" href="#aboutme">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="#project">Projects</a>
+							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">Pages</a>
 								<ul class="dropdown-menu">
@@ -52,7 +52,7 @@
 											Details</a></li>
 									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 								</ul>
-							</li>
+							</li> -->
 
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
@@ -78,7 +78,7 @@
 							<h5>This is me</h5>
 							<h2>Yuchao Wang</h2>
 							<p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
-							<a class="banner_btn" href="#">Discover Now</a>
+							<a class="banner_btn" href="#aboutme">Discover Now</a>
 						</div>
 					</div>
 				</div>
@@ -88,7 +88,7 @@
 	<!--================End Home Banner Area =================-->
 
 	<!--================Welcome Area =================-->
-	<section class="welcome_area p_120">
+	<section class="welcome_area p_120" id="aboutme">
 		<div class="container">
 			<div class="row welcome_inner">
 				<div class="col-lg-6">
@@ -214,14 +214,14 @@
 	<!--================End Feature Area =================-->
 
 	<!--================Projects Area =================-->
-	<section class="projects_area p_120">
+	<section class="projects_area p_120" id="project">
 		<div class="container">
 			<div class="main_title">
 				<h2>Accomplishment</h2>
 				<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p> -->
 			</div>
 			<div class="projects_fillter">
-				<ul class="filter list">
+				<ul class="filter list" >
 					<li class="active" data-filter="*"><a href="#">All</a></li>
 					<li data-filter=".work"><a href="#">Work Experience</a></li>
 					<li data-filter=".web"><a href="#">Mobile/Web App </a></li>
