--- a/index.html
+++ b/index.html
@@ -123,23 +123,23 @@
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Illustrator</h4>
+								<h4>AWS, Android, Git, NodeJs, SQLServer, MongoDB, Unity, Flask</h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Sublime <span class="counter">95</span>%</h4>
+								<h4>HTTP, REST APIs, Agile </h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Sketch <span class="counter">75</span>%</h4>
+								<h4>Linux, Unix, Windows</h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
