--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li id="myName"> YUCHAO'S WEBSITE</li>
 			<li><a href="#Bio">Biography</a></li>
 			
-			<li><a href="https://drive.google.com/file/d/1Q0af0kLSh2TRTkb4wgvu74uEAK1gk91g/view?usp=sharing">Resume</a></li>
+			<li><a href="yuchao-resume-grad.pdf">Resume</a></li>
 			<li><a href="#WorkExperience">Work Experience</a></li>
 			<li><a href="#Projects">Projects</a>
 			<li><a href="#Contact">Contact</a></li>
@@ -45,7 +45,7 @@
 						mobile app. As Yuchao said, "I like to solve problems and conquer challenges in front of me". </p>
 					
 					<p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
-					<a class="banner_btn" href="https://drive.google.com/file/d/1Q0af0kLSh2TRTkb4wgvu74uEAK1gk91g/view?usp=sharing">RESUME</a>
+					<a class="banner_btn" href="yuchao-resume-grad.pdf">RESUME</a>
 						
 				</td>
 			</tr>
