--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
 				<td class="myPhoto">
 					<img id="photo" src="img/banner/man.jpg" alt="">
 				</td>
-				<td class="intro">
+				<td class="intro1">
 					<h1>Contact</h1>
 					<div>
 						<p class="email1"><i class="material-icons">attach_email</i></p>
 						<p class="email2">&nbsp;doublewangyuchao@gmail.com</p>
 						<div>
 						<img class="linkedin" src="img/logo/linkedin.webp" alt="">
-						<a class="linkedin" href="https://www.linkedin.com/in/yuchao-wang-45526a166/">&nbsp;Linkedin</a>
+						<a class="linkedin" href="https://www.linkedin.com/in/yuchao-wang-45526a166/">&nbsp;LinkedIn</a>
 						</div>
 					</div>
 						
