--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 			 <h1 class="Title">Contact</h1>
 			 <div class="contacts">
 				<p class="email1"><i class="material-icons">attach_email</i></p>
-				<p class="email2">&nbsp;doublewangyuchao@gmail.com</p>
+				<p class="email2"><a href="mailto:doublewangyuchao@gmail.com">&nbsp;doublewangyuchao@gmail.com</a></p>
 				<div>
 				<img class="linkedin" src="img/logo/linkedin.webp" alt="">
-				<a class="linkedin" href="https://www.linkedin.com/in/yuchao-wang-45526a166/">&nbsp;Linkedin</a>
+				<a class="linkedin" href="https://www.linkedin.com/in/yuchao-wang-45526a166/">&nbsp;LinkedIn</a>
 				</div>
 			</div>
 			
