--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 				</td>
 				<td class="intro1">
 					<h1>Biography</h1>
-					<p style="color:blueviolet;font-size:120%;">Yuchao is a Masters of CS student at Northwestern University. He has compelted the bachelor's degree in
-						Computer Engineering from University of Pittsburgh. He is actively looking for exciting Software Engineer full-time position
+					<p style="color:blueviolet;font-size:120%;">I am pursuing a Master's degree in Computer Science at Northwestern University. I compelted my bachelor in
+						Computer Engineering at the University of Pittsburgh. I am actively looking for exciting Software Engineer full-time position
 						</p>
-					<p style="color:blueviolet;font-size:120%;">Yuchao is very self-motived and strongly aspire to learn new technologies. He really likes to spend
+					<p style="color:blueviolet;font-size:120%;">I am very self-motived and strongly aspire to learn new technologies. I like to spend
 						time building web and
-						mobile app. As Yuchao said, "I like to solve problems and conquer challenges in front of me". </p>
+						mobile app. I like to solve problems and conquer challenges in front of me. </p>
 					
 					<p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
 					<p ><a class="bio-link" href="biography.html">Discover More</a></p>
