--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 				</td>
 				<td class="intro1">
 					<h1>Biography</h1>
-					<p style="color:blueviolet;font-size:120%;">I am pursuing a Master's degree in Computer Science at Northwestern University. I compelted my bachelor in
+					<p class="bio-text1">I am pursuing a Master's degree in Computer Science at Northwestern University. I compelted my bachelor in
 						Computer Engineering at the University of Pittsburgh. I am actively looking for exciting Software Engineer full-time position
 						</p>
-					<p style="color:blueviolet;font-size:120%;">I am very self-motived and strongly aspire to learn new technologies. I like to spend
+					<p class="bio-text1">I am very self-motived and strongly aspire to learn new technologies. I like to spend
 						time building web and
 						mobile app. I like to solve problems and conquer challenges in front of me. </p>
 					
-					<p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
+					<p class = "bio-text2">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
 					<p ><a class="bio-link" href="biography.html">Discover More</a></p>
 					<p><a class="bio-link" href="yuchao-resume-grad.pdf">RESUME</a></p>
 					
