--- a/biography.html
+++ b/biography.html
@@ -33,14 +33,14 @@
 				</td>
 				<td class="intro2">
 					<h1>Biography</h1>
-					<p style="color:blueviolet;font-size:120%;">I am pursuing a Master's degree in Computer Science at Northwestern University. I compelted my bachelor in
+					<p class="bio-text1">I am pursuing a Master's degree in Computer Science at Northwestern University. I compelted my bachelor in
 						Computer Engineering at the University of Pittsburgh. I am actively looking for exciting Software Engineer full-time position
 						</p>
-					<p style="color:blueviolet;font-size:120%;">I am very self-motived and strongly aspire to learn new technologies. I like to spend
+					<p class="bio-text1">I am very self-motived and strongly aspire to learn new technologies. I like to spend
 						time building web and
 						mobile app. I like to solve problems and conquer challenges in front of me. </p>
 					
-                    <p style="color:royalblue;font-size:120%;">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
+                    <p class="bio-text2">LIFE IS SHORT. STOP AND SMELL ROSES ALONG THE WAY</p>
                     <h2>Technical Skills</h2>
                     <h4>• AWS, Android, Git, NodeJs, SQLServer, MongoDB, Unity, Flask</h4>
                     <h4>• Java, Python, NoSQL</h4>	
